# marlin

./: CMakeLists.txt  LICENSE  Makefile  README.md
bench/: exploreDictionaries.cc
bench/codecs/: fse.hpp  gzip.cc  huf.cc  lz4.cc  lzo.hpp  marlin.cc  marlin.hpp  nibble.cc  rice.cc  rle.cc  rle.hpp  snappy.hpp  zstd.cc
bench/util/: alignedarray.hpp
constexprlib/: marlin.cc  marlin.h  test.cc
examples/: marlinImage.cc
ext/: Makefile
inc/: imageMarlin.hpp  marlin.h  marlin.hpp
lib/: bitstream.h  cx.h  distribution.h  distribution.hpp  encoder.cc  marlin.cc  marlin.h  test.cc  test2.cc  util.h  util.hpp
rawzor/: .gitignore  Makefile
src/: analyzeMarlin.cc  benchmark.cc  build_dictionaries.cc  compareDictionaries.cc  compress.cc  configuration.cc  dcc2017.cc  dcc2018.cc  decoder.cc  decoder.h  decompress.cc  dictionary.cc  dictionary.h  dictionary.hpp  encoder.cc  encoder.h  entropyCoder.cc  entropyDecoder.cc  exploreDictionaries.cc  imageBlockEC.cc  imageBlockEC.hpp  imageCoder.cc  imageDecoder.cc  imageHeader.cc  imageTransformer.cc  imageTransformer.hpp  instantiations.h  marlin.cc  marlin_bmi2.h  profiler.cc  profiler.hpp  testAccessSpeed.cc
src/codecs/: charls.cc  charls.hpp  fse.cc  gipfeli.cc  gipfeli.hpp  gzip.cc  gzip.hpp  huf.hpp  lz4.hpp  lzo.cc  marlin.cc  marlin2.cc  marlin2.hpp  marlin2018.cc  marlin2018.hpp  marlinWiP.cc  marlinWiP.hpp  nibble.hpp  rice.cc  rice.hpp  snappy.cc  zstd.cc  zstd.hpp
src/marlinlib/: marlin.hpp
src/util/: alignedarray.hpp  codec.hpp  dedupvector.hpp  distribution.hpp
test/: correctness.cc
utils/: buildPrecalculatedDictionaries.cc  imageMarlin.cc  marlinUtility.cc  testImage.cc
